style.css
.calculator-outer {
  /* centre vertically and horizontally */
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  /* centre vertically and horizontally */
  width: 400px;
  height: 600px;
  background-color: #1EA896;
  border: 3px solid #523F38;
}

.display {
  background-color: #FFFFFF;
  border-radius: 10px;
  margin: 10px;
  width: 375px;
  height: 20%;
  border: 1px solid black;
  font-size: 4em;
  word-wrap: scroll;
}

.grid-container {
  display: grid;
  height: 70%;
  grid-gap: 10px;
  padding: 10px;
  grid-template-columns: repeat(4, auto);
  grid-template-rows: repeat(5, auto);
  
}

.grid-item {
  border-radius: 10px;
  min-width: 80px;
}

.input-btn {
  background-color: #FF715B;
}

.input-btn:active {
  background-color: lightgoldenrodyellow;
}

.input-btn:hover {
  -webkit-filter: brightness(90%);
}

